test/corpus/lucid.txt
====================
Function definition
====================

fun gcd(a: Int32, b: Int32): Int32 {
  return a
}

---

(source_file
  (func_def
    name: (ident)
    (params
      (param
        name: (ident)
        type: (type
          (ident)))
      (param
        name: (ident)
        type: (type
          (ident))))
    result: (type
      (ident))
    body: (block
      (return_stmt
        value: (ident)))))

=====================
Compile time function
=====================

comp fun square(n: Int32): Int32 {
  return n * n
}

---

(source_file
  (func_def
    name: (ident)
    (params
      (param
        name: (ident)
        type: (type
          (ident))))
    result: (type
      (ident))
    body: (block
      (return_stmt
        value: (binary_expr
          left: (ident)
          right: (ident))))))

====================
Type definition
====================

val Point: Type = (x: Int32, y: Int32)

---

(source_file
  (type_def
    name: (ident)
    (params
      (param
        name: (ident)
        type: (type
          (ident)))
      (param
        name: (ident)
        type: (type
          (ident))))))

====================
Variable declaration
====================

fun main(): Int32 {
  val n: Int32 = 21
  val buffer: Int32[101]
  comp val c: Int32 = 3
  return n
}

---

(source_file
  (func_def
    name: (ident)
    (params)
    result: (type
      (ident))
    body: (block
      (var_decl_stmt
        name: (ident)
        type: (type
          (ident))
        value: (number))
      (var_decl_stmt
        name: (ident)
        type: (type
          (ident)
          (number)))
      (var_decl_stmt
        name: (ident)
        type: (type
          (ident))
        value: (number))
      (return_stmt
        value: (ident)))))

====================
Assignment
====================

fun main(): Int32 {
  &n = n + 1
  &buffer[col] = 0
  &p.x = 3
  &ps[i].x = 4
  &q.p.x = 5
  return 0
}

---

(source_file
  (func_def
    name: (ident)
    (params)
    result: (type
      (ident))
    body: (block
      (assign_stmt
        target: (ident)
        value: (binary_expr
          left: (ident)
          right: (number)))
      (assign_stmt
        target: (index_expr
          base: (ident)
          index: (ident))
        value: (number))
      (assign_stmt
        target: (field_expr
          base: (ident)
          field: (ident))
        value: (number))
      (assign_stmt
        target: (field_expr
          base: (index_expr
            base: (ident)
            index: (ident))
          field: (ident))
        value: (number))
      (assign_stmt
        target: (field_expr
          base: (field_expr
            base: (ident)
            field: (ident))
          field: (ident))
        value: (number))
      (return_stmt
        value: (number)))))

====================
Branches
====================

fun main(): Int32 {
  if a == b {
    return 1
  } else if a > b {
    return 2
  } else {
    return 3
  }
}

---

(source_file
  (func_def
    name: (ident)
    (params)
    result: (type
      (ident))
    body: (block
      (if_stmt
        condition: (binary_expr
          left: (ident)
          right: (ident))
        consequence: (block
          (return_stmt
            value: (number)))
        alternative: (if_stmt
          condition: (binary_expr
            left: (ident)
            right: (ident))
          consequence: (block
            (return_stmt
              value: (number)))
          alternative: (block
            (return_stmt
              value: (number))))))))

====================
Loop and break
====================

fun main(): Int32 {
  loop {
    break
  }
  return 0
}

---

(source_file
  (func_def
    name: (ident)
    (params)
    result: (type
      (ident))
    body: (block
      (loop_stmt
        (block
          (break_stmt)))
      (return_stmt
        value: (number)))))

====================
Operator precedence
====================

fun main(): Bool {
  return a or b and c == d + e * f
}

---

(source_file
  (func_def
    name: (ident)
    (params)
    result: (type
      (ident))
    body: (block
      (return_stmt
        value: (binary_expr
          left: (ident)
          right: (binary_expr
            left: (ident)
            right: (binary_expr
              left: (ident)
              right: (binary_expr
                left: (ident)
                right: (binary_expr
                  left: (ident)
                  right: (ident))))))))))

=====================
Grouping and negation
=====================

fun main(): Bool {
  return !(a + b) * c >= d
}

---

(source_file
  (func_def
    name: (ident)
    (params)
    result: (type
      (ident))
    body: (block
      (return_stmt
        value: (binary_expr
          left: (binary_expr
            left: (unary_expr
              operand: (paren_expr
                (binary_expr
                  left: (ident)
                  right: (ident))))
            right: (ident))
          right: (ident))))))

====================
Calls and access
====================

fun main(): Int32 {
  do printString("hi")
  return f(1, 2) + ps[0].x + r.v[1]
}

---

(source_file
  (func_def
    name: (ident)
    (params)
    result: (type
      (ident))
    body: (block
      (do_stmt
        value: (call_expr
          function: (ident)
          (string)))
      (return_stmt
        value: (binary_expr
          left: (binary_expr
            left: (call_expr
              function: (ident)
              (number)
              (number))
            right: (field_expr
              base: (index_expr
                base: (ident)
                index: (number))
              field: (ident)))
          right: (index_expr
            base: (field_expr
              base: (ident)
              field: (ident))
            index: (number)))))))

=====================
Literals and comments
=====================

# a comment
fun main(): Bool {
  val s: String = "text"
  return true
}

---

(source_file
  (comment)
  (func_def
    name: (ident)
    (params)
    result: (type
      (ident))
    body: (block
      (var_decl_stmt
        name: (ident)
        type: (type
          (ident))
        value: (string))
      (return_stmt
        value: (bool)))))
